     - MultiLineTextBox scrolls correctly when text is added.
     - MultiLineTextBox has cursor support.
     - Text::stripTopLines() was not removing all characters.
     - Deleted empty fontbase.cpp file.

  - New Features:
     - Moved all classes into WoopsiUI namespace.
     - Added Date class.
     - Added Calendar gadget.
     - Added Calendar example.
     - Added Date example.


  V0.35 (20081012)
  
  - Fixes:
     - Renamed "Textbox" to "TextBox".
     - Corrected case of "PackedFontBase.h" include in "packedfontbase.cpp"
       (thanks Gattman, bug 2101099).
     - Removed offcolour pixels from around @ symbol in sysfont bitmap.
     - Moved @ symbol in tinyfont.bmp to correct ASCII location.
     - SkinnedWindows move to front when clicked.
     - Renamed TextBox::TextPositionXXX to TextAlignmentXXX, along with all
       related functions and similar in MultiLineTextBox and ScrollingTextBox.
     - TextBox::addText() was allocating one byte too many when concatenating
       strings.
     - Renamed addText() to appendText() in TextBox, MultiLineTextBox and
       ScrollingTextBox classes.
     - Text::wrap() correctly wraps text rows with no break points.
     - Fixed const-correctness of some Font (and subclass) methods.

  - New Features:
     - Button has different appearance when disabled.
     - CheckBox has different appearance when disabled.
     - ContextMenuItem has different appearance when disabled.
     - CycleButton has different appearance when disabled.
     - RadioButton has different appearance when disabled.
     - Added WoopsiKeyboard gadget.
     - Added all missing 7-bit ASCII glyphs to sysfont.
     - Added keyboard example.
     - Added TextBox::appendText(char).
     - Added TextBox::setText(char).
     - Added MultiLineTextBox::appendText(char).
     - Added MultiLineTextBox::setText(char).
     - Added ScrollingTextBox::addText(char).
     - Added ScrollingTextBox::setText(char).
     - Added WoopsiTimer gadget.